@@ -26,7 +26,7 @@ describe PDF::SimpleTable do
       table.position      = :center
   
       data = [
-        { "left" => "<b># of Members</b>", "1" => "Up to 50", "2" => "51 - 100", "3" => "101 - 150", "4" => "151 - 200", "5" => "201 and up" },
+        { "left" => "<b># of Member</b>", "1" => "Up to 50", "2" => "51 - 100", "3" => "101 - 150", "4" => "151 - 200", "5" => "201 and up" },
         { "left" => "<b>Deposit</b>", "1" => "$500.00", "2" => "$1,100.00", "3" => "$1,900.00", "4" => "$2,500.00", "5" => "$3,200" },
       ]
   
